# pass-gen

./: .coveragerc  .gitignore  LICENSE.md  Makefile  Pipfile  README.md  psswd.txt  pyproject.toml  setup.cfg  test.txt
app/: __main__.py  main.py  main_test.py  pass_gen.py  pass_gen_test.py
app/data/: sqlite.py  type.py
app/models/: password.py
app/repositories/: fake.py  sqlite.py  type.py
app/usecases/: pass_gen.py  utils.py
test/: main_test.py
tests/: conftest.py  main_test.py  pass_gen_test.py
