[tool.poetry]
name = "pass-gen"
version = "0.1.0"
description = ""
authors = ["Ruidy <ruidy.nemausst@gmail.com>"]
readme = "README.md"
packages = [{include = "pass_gen"}]

[tool.poetry.dependencies]
pydantic = "^1.10.2"
typer = {extras = ["all"], version = "^0.6.1"}
python = "^3.10"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.8.0"
Faker = "^14.2.1"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
vulture = "^2.6"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_defs=true

plugins = ["pydantic.mypy"]
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
